--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-google-maps/api": "^2.19.3",
     "@types/google-map-react": "^2.1.10",
+    "aws-sdk": "^2.1618.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "connect-mongodb-session": "^4.0.0",
@@ -22,6 +23,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "formidable": "^3.5.1",
     "google-maps-react": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
