--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "google-maps-react": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "mysql2": "^3.10.1",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
